// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row Pure component match expected snapshot 1`] = `
<div
  className="row-0-0 "
>
  <div>
    row content
  </div>
</div>
`;

exports[`Row Pure component match expected snapshot with reverse prop 1`] = `
<div
  className="row-0-0 reverse "
>
  <div>
    row content
  </div>
</div>
`;
